# learnvulkan

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/Dependencies/: CMakeLists.txt  FetchGLFW.cmake  FetchGLM.cmake  FetchGlslang.cmake  FetchImGui.cmake  FetchShaderc.cmake  FetchSpdlog.cmake  FetchStb.cmake  FetchStrongType.cmake  FetchTinyObjLoader.cmake  Glslang_IncludeBefore.cmake  Shaderc_IncludeBefore.cmake
cmake/Modules/: FindVulkan.cmake  ForceColoredOutput.cmake  Vulkan.cmake
cmake/Toolchains/: ClangLibc++.cmake  MinGW.cmake
scripts/: build_all_linux.sh
src/: PhysicalDevicePicker.hpp  main.cpp  vulkan-hpp-test.cpp
src/Pch/: Glfw.hpp  Vulkan.hpp  glm.hpp
src/Stdx/: Algorithm.hpp
src/VkIgnite/: Device.cpp  Device.hpp  Instance.cpp  Instance.hpp  MinVkVersion.hpp.in  PhysicalDevicePicker.hpp  Shader.cpp  Shader.hpp  Types.hpp  Version.hpp  Version.hpp.in  VkIgnite.cpp  VkIgnite.hpp
src/VkIgnite/Wsi/: Glfw.cpp  Glfw.hpp
src/pch/: glfw.hpp  spdlog.hpp  vulkan.hpp
